--- a/index.html
+++ b/index.html
@@ -3,28 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GLTF Model Viewer</title>
+    <title>Interactive 3D Model</title>
     <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-
-        canvas {
-            display: block;
-            width: 100%;
-            height: 100%;
-        }
-
-        #playButton {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 10;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
+        body { margin: 0; }
+        canvas { display: block; }
     </style>
 </head>
 <body>
@@ -32,4 +14,3 @@
     <script type="module" src="app.js"></script>
 </body>
 </html>
-
